docs & feat: update README.md and complete AI/RPA system integration